node-app/integration/sfdx-org/force-app/main/default/objects/Sample__c/Sample__c.object-meta.xml
<CustomObject>
    <description>This is a sample entity</description>
    <label>Sample</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Samples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>