node-app/integration/sfdx-org/force-app/main/default/objects/Sample__c/fields/SampleEmail__c.field-meta.xml
<CustomField>
    <fullName>SampleEmail__c</fullName>
    <description>SampleEmail description.</description>
    <label>SampleEmail</label>
    <type>Email</type>
</CustomField>