node-app/integration/sfdx-org/force-app/main/default/objects/Sample__c/fields/SampleLongTextArea__c.field-meta.xml
<CustomField>
    <fullName>SampleLongTextArea__c</fullName>
    <description>SampleLongTextArea description.</description>
    <label>SampleLongTextArea</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>