node-app/integration/sfdx-org/force-app/main/default/objects/Sample__c/fields/SampleMultiPicklist__c.field-meta.xml
<CustomField>
    <fullName>SampleMultiPicklist__c</fullName>
    <description>SampleMultiPicklist description.</description>
    <label>SampleMultiPicklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>