node-app/integration/sfdx-org/force-app/main/default/objects/Sample__c/fields/SamplePercent__c.field-meta.xml
<CustomField>
    <fullName>SamplePercent__c</fullName>
    <description>SamplePercent description.</description>
    <label>SamplePercent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>