node-app/integration/sfdx-org/force-app/main/default/objects/Sample__c/fields/SamplePicklist__c.field-meta.xml
<CustomField>
    <fullName>SamplePicklist__c</fullName>
    <description>SamplePicklist description.</description>
    <label>SamplePicklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>