node-app/integration/sfdx-org/force-app/main/default/objects/Sample__c/fields/SampleText__c.field-meta.xml
<CustomField>
    <fullName>SampleText__c</fullName>
    <description>SampleText description.</description>
    <label>SampleText</label>
    <length>100</length>
    <type>Text</type>
</CustomField>