node-app/integration/sfdx-org/force-app/main/default/objects/Sample__c/fields/SampleTime__c.field-meta.xml
<CustomField>
    <fullName>SampleTime__c</fullName>
    <description>SampleTime description.</description>
    <label>SampleTime</label>
    <type>Time</type>
</CustomField>