node-app/integration/sfdx-org/force-app/main/default/objects/Sample__c/fields/SampleURL__c.field-meta.xml
<CustomField>
    <fullName>SampleURL__c</fullName>
    <description>SampleURL description.</description>
    <label>SampleURL</label>
    <type>Url</type>
</CustomField>